--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,6 @@ jobs:
         with:
           project: ./site
           browser: chrome
-          build: yarn build
-          start: yarn start
+          build: npm run build
+          start: npm run dev
           wait-on: "http://localhost:3000"
