--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,12 @@
-name: E2E on Chrome
-
+name: End-to-end tests
 on: [push]
-
 jobs:
-  install:
-    runs-on: ubuntu-latest
+  cypress-run:
+    runs-on: ubuntu-20.04
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-
+      # Install NPM dependencies, cache them correctly
+      # and run all Cypress tests
       - name: Cypress run
-        uses: cypress-io/github-action@v3
-        with:
-          project: ./site
-          browser: chrome
-          build: npm run build
-          start: npm run dev
-          wait-on: "http://localhost:3000"
+        uses: cypress-io/github-action@v4
